<resources>
    <string name="app_name">edu app</string>
    <string name="title_app">E.G.4.K</string>
    <!-- Initial screen -->
    <string name="title_welcome">Somos tu guia, donde el conocimiento no tiene limites</string>
    <string name="button_register">Registrar</string>
    <string name="button_login">Iniciar Sesion</string>
    <string name="title_view_login">Iniciar</string>
    <string name="title_view_register">Registrar</string>
    <string name="label_email">Correo</string>
    <string name="placeholder_email">Ingresar Correo</string>
    <string name="label_password">Contraseña</string>
    <string name="placeholder_password">Ingresar contraseña</string>
    <string name="btn_login_view">Iniciar Sesion</string>
    <string name="btn_forgot_view_login">¿OLVIDO SU CONTRASEÑA?</string>
    <string name="btn_register_view_login">REGISTRARSE</string>
    <string name="btn_back">regresar</string>
    <string name="todo">TODO</string>

    <!-- Juego Maravillas -->
    <string name="adivinalo">Adivinalo</string>
    <string name="adivina">ADIVINA</string>
    <string name="empezar">EMPEZAR</string>
    <string name="puntuaci_n_mas_alta">Puntuación mas alta</string>


    <string name="maxpuntuacion">Máxima Puntuación</string>
    <string name="imagenaleatoria">imagenaleatoria</string>


    <string name="ingrese_el_nombre">Ingrese el nombre</string>
    <string name="confirmar">Confirmar</string>
    <string name="correcto">Correcto</string>
    <string name="incorrecto">Incorrecto</string>
    <string name="puntos_0">Puntos: 0</string>
    <string name="vidas_3">Vidas: 3</string>

    <string name="vidainicial">Vidas: 3</string>
    <string name="siguiente">Siguiente</string>


    <string name="maravilla_1">Gran Pirámide de Giza</string>
    <string name="maravilla_2">Jardines colgantes de Babilonia</string>
    <string name="maravilla_3">Estatua de Zeus en Olimpia</string>
    <string name="maravilla_4">Templo de Artemisa en Éfeso</string>
    <string name="maravilla_5">Mausoleo de Halicarnaso</string>
    <string name="maravilla_6">Coloso de Rodas</string>
    <string name="maravilla_7">Faros de Alejandría</string>

    <string name="repuestas">Repuestas</string>
</resources>